# OceanSense

./: .env.example  .gitignore  Anchor.toml  BUOY_SPEC.md  Cargo.toml  README.md  package.json  tsconfig.json
.devcontainer/: setup.sh
.superstack/: idea-context.md  validation-report.html
app/: package.json  tsconfig.json  tsconfig.tsbuildinfo
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/claim/: page.tsx
app/src/app/cpen/: page.tsx
app/src/app/reading/: page.tsx
app/src/components/: BuoyMap.tsx  Footer.tsx  Navbar.tsx  Preloader.tsx  Providers.tsx  Ticker.tsx
app/src/hooks/: useExchangeRate.ts  useOceanSense.ts
gateway/: index.ts  package.json
metadata/: cpen.json
programs/ocean-sense-pay/: Cargo.toml
programs/ocean-sense-pay/src/: cpen.rs  lib.rs
scripts/: setup-cpen-mint.sh
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  index.ts  types.ts
tests/: anchor.test.day2.ts  anchor.test.ts
